# carla-digitaltwins

./: .gitignore  CMakeLists.txt  CarlaDigitalTwinsTool.uplugin  README.md  Setup.bat  Setup.sh  pragma.py
.github/workflows/: setup.yml
CMake/: FindBoost.cmake  FindPROJ.cmake  FindSQLite3.cmake  FindSUMO.cmake  FindXercesC.cmake  StreetMap.cmake  ToolchainCommon.cmake  ToolchainUE4.cmake  ToolchainUE5.cmake  UEContent.cmake  XercesCConfig_HACK.sh
Content/Python/: generate_tile.py  requirements.txt  segmenter.py
Source/CarlaDigitalTwinsTool/: CarlaDigitalTwinsTool.Build.cs
Source/CarlaDigitalTwinsTool/Private/: CarlaDigitalTwinsTool.cpp
Source/CarlaDigitalTwinsTool/Private/Actor/: LargeMapManager.cpp
Source/CarlaDigitalTwinsTool/Private/BlueprintFunctionLibrary/: MiscFunctionLibrary.cpp
Source/CarlaDigitalTwinsTool/Private/Commandlet/: GenerateTileCommandlet.cpp
Source/CarlaDigitalTwinsTool/Private/Generation/: GeometryImporter.cpp  MapGenFunctionLibrary.cpp  OpenDriveToMap.cpp
Source/CarlaDigitalTwinsTool/Private/Online/: CustomFileDownloader.cpp
Source/CarlaDigitalTwinsTool/Private/TrafficLights/: TrafficLightActor.cpp
Source/CarlaDigitalTwinsTool/Private/TrafficLights/Widgets/: STrafficLightPreviewViewport.cpp  STrafficLightToolWidget.cpp
Source/CarlaDigitalTwinsTool/Private/Utils/: GeometryImporter.cpp  GoogleStreetViewFetcher.cpp  GoogleStreetViewManager.cpp
Source/CarlaDigitalTwinsTool/Private/Weather/: Weather.cpp
Source/CarlaDigitalTwinsTool/Private/Widget/: DigitalTwinsBaseWidget.cpp
Source/CarlaDigitalTwinsTool/Public/: CarlaDigitalTwinsTool.h
Source/CarlaDigitalTwinsTool/Public/Actor/: BoundingBox.h  LargeMapManager.h  ProceduralCustomMesh.h
Source/CarlaDigitalTwinsTool/Public/BlueprintFunctionLibrary/: MiscFunctionLibrary.h
Source/CarlaDigitalTwinsTool/Public/Carla/: AtomicList.h  Buffer.cpp  Buffer.h  BufferPool.h  BufferView.h  Debug.h  Exception.cpp  FileSystem.cpp  Iterator.h  ListView.h  Logging.h  Memory.h  PythonUtil.h  RecurrentSharedFuture.h  StringUtil.cpp  StringUtil.h  ThreadGroup.h  ThreadPool.h  Time.h  Version.h  disable-ue4-macros.h
Source/CarlaDigitalTwinsTool/Public/Carla/Client/: FIleTransfer.cpp  FileTransfer.h  Junction.cpp  Junction.h  Landmark.h  LightState.h  Map.cpp  Map.h  Waypoint.cpp  Waypoint.h
Source/CarlaDigitalTwinsTool/Public/Carla/Geom/: BoundingBox.h  CubicPolynomial.h  GeoLocation.cpp  GeoLocation.h  Location.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Rotation.h  Rtree.h  Simplification.cpp  Simplification.h  Transform.h  Vector2D.h  Vector3D.h  Vector3DInt.h
Source/CarlaDigitalTwinsTool/Public/Carla/MarchingCube/: Cube.h
Source/CarlaDigitalTwinsTool/Public/Carla/MoodyCamel/: ConcurrentQueue.h
Source/CarlaDigitalTwinsTool/Public/Carla/ODRSpiral/: ODRSpiral.cpp
Source/CarlaDigitalTwinsTool/Public/Carla/OpenDrive/: OpenDriveParser.cpp  OpenDriveParser.h
Source/CarlaDigitalTwinsTool/Public/Carla/PointCloud/: PointCloudIO.h
Source/CarlaDigitalTwinsTool/Public/Carla/Profiler/: LifetimeProfiled.cpp  Profiler.cpp  Profiler.h
Source/CarlaDigitalTwinsTool/Public/Carla/RPC/: BoundingBox.h  Client.h  Color.h  Command.h  CommandResponse.h  DebugShape.h  EnvironmentObject.h  EpisodeInfo.h  EpisodeSettings.h  LabelledPoint.h  LightState.h  MapInfo.h  MapLayer.h  ObjectLabel.h  QualityLevel.h  Response.h  Server.h  String.h  Texture.h  TrafficLightState.h  WeatherParameters.cpp  WeatherParameters.h
Source/CarlaDigitalTwinsTool/Public/Carla/Road/: Controller.h  Deformation.h  InformationSet.h  Junction.h  Lane.cpp  Lane.h  LaneSection.cpp  LaneSection.h  LaneSectionMap.h  LaneValidity.h  Map.h  MapBuilder.cpp  MapBuilder.h  MapData.cpp  MapData.h  MeshFactory.cpp  MeshFactory.h  Object.h  Road.cpp  Road.h  RoadElementSet.h  RoadMap.cpp  RoadMap.h  Signal.h
Source/CarlaDigitalTwinsTool/Public/Carla/Simplify/: Simplify.h
Source/CarlaDigitalTwinsTool/Public/Carla/client/: Junction.cpp  Map.cpp  Map.h  WalkerAIController.h  Waypoint.h  World.h  WorldSnapshot.h
Source/CarlaDigitalTwinsTool/Public/Carla/marchingcube/: Cube.h
Source/CarlaDigitalTwinsTool/Public/Carla/odrSpiral/: odrSpiral.cpp
Source/CarlaDigitalTwinsTool/Public/Carla/profiler/: LifetimeProfiled.cpp  Profiler.cpp
Source/CarlaDigitalTwinsTool/Public/Carla/pugixml/: pugixml.hpp
Source/CarlaDigitalTwinsTool/Public/Carla/rpc/: AckermannControllerSettings.h  Actor.h  ActorAttribute.h  ActorDefinition.h  ActorDescription.h  AttachmentType.h  BoneTransformDataOut.h  Color.h  Command.h  DebugShape.h  EnvironmentObject.h  EpisodeInfo.h  EpisodeSettings.h  FloatColor.h  GearPhysicsControl.h  LabelledPoint.h  LightState.h  MapInfo.h  MaterialParameter.h  Metadata.h  OpendriveGenerationParameters.h  Response.h  Server.h  Texture.h  VehicleAckermannControl.h  VehicleControl.h  VehicleDoor.h  VehicleLightState.h  VehiclePhysicsControl.h  VehicleTelemetryData.h  VehicleWheels.h  WalkerControl.h  (+5 more)
Source/CarlaDigitalTwinsTool/Public/Commandlet/: GenerateTileCommandlet.h
Source/CarlaDigitalTwinsTool/Public/Generation/: GeometryImporter.h  MapGenFunctionLibrary.h  OpenDriveToMap.h
Source/CarlaDigitalTwinsTool/Public/Online/: CustomFileDownloader.h
Source/CarlaDigitalTwinsTool/Public/TrafficLights/: TLHead.h  TLHeadAttachment.h  TLHeadOrientation.h  TLHeadStyle.h  TLLightState.h  TLLightType.h  TLModule.h  TrafficLightActor.h
Source/CarlaDigitalTwinsTool/Public/Utils/: GeometryImporter.h  GoogleStreetViewFetcher.h  GoogleStreetViewManager.h
Source/CarlaDigitalTwinsTool/Public/Weather/: Weather.h  WeatherParameters.h
Source/CarlaDigitalTwinsTool/Public/Widget/: DigitalTwinsBaseWidget.h
Source/CarlaMeshGeneration/: CarlaMeshGeneration.Build.cs
Source/CarlaMeshGeneration/Private/: CarlaMeshGeneration.cpp
Source/CarlaMeshGeneration/Private/Actor/: ProceduralMeshActor.cpp
Source/CarlaMeshGeneration/Private/Generation/: DynamicMeshGeneration.cpp  MapGenFunctionLibrary.cpp
Source/CarlaMeshGeneration/Public/Generation/: DynamicMeshGeneration.h  MapGenFunctionLibrary.h
Source/CarlaMeshGeneration/Public/Paths/: GenerationPathsHelper.h
(+58 files in other folders)
